<resources>
    <string name="app_name">EjerciciosInterfaces</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="pizzeria">Pizzeria</string>
    <string name="calcular">Calcular</string>
    <string name="Numero1">Numero 1\n</string>
    <string name="Numero2">Numero 2\n</string>
    <string name="Ejercicio1">Ejercicio 1</string>
    <string name="hello_blank_fragment">Hola fragmento en blanco</string>
    <string name="click">Click</string>
    <string name="Pizzas">Pizzas</string>
    <string name="Bebidas">Bebidas</string>
    <string name="Complementos">Entrantes</string>
    <string name="VerPedido">Ver pedido</string>
    <string name="Salir">Salir\t\t\t\t</string>
    <string name="comprar">Comprar\n</string>
    <string name="QuesoPeperoni"><![CDATA[Queso & Peperoni\n]]></string>
    <string name="Margarita">Margarita\n</string>
    <string name="Hawaiana">Hawaina\n</string>
    <string name="Pollo">Pollo</string>
    <string name="Napolitana">Napolitana</string>
    <string name="QuatroQuesos">4 Quesos</string>
    <string name="SalmónAhuQuesoCrema">Salmon ahumado c/Queso crema</string>
    <string name="Carbonara">Carbonara\n</string>
    <string name="Barbacoa">Barbacoa</string>
    <string name="Calzone">Calzone</string>
</resources>